[gd_scene load_steps=8 format=3 uid="uid://c6iwnkenxl6kd"]

[ext_resource type="Texture2D" uid="uid://bki2xq6c1vtnh" path="res://backgroung/warped-files/warped-files/PNG/environment/environment-preview.png" id="1_8ur0r"]
[ext_resource type="Script" path="res://ui/main_memu_screen.gd" id="1_vwco8"]
[ext_resource type="Theme" uid="uid://dg1vntjuwsbuf" path="res://ui/theme.tres" id="2_1asoo"]
[ext_resource type="Theme" uid="uid://bgs5saqpwxq0i" path="res://ui/new_theme.tres" id="3_ich61"]
[ext_resource type="Texture2D" uid="uid://c2pyrknu5nlhh" path="res://backgroung/warped-files/warped-files/PNG/spritesheets/player/player-shoot-up.png" id="4_ktrql"]
[ext_resource type="Texture2D" uid="uid://bfu5p1q8udbi4" path="res://backgroung/warped-files/warped-files/PNG/spritesheets/enemies/jumper-jump.png" id="5_ptxkv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ashqg"]
bg_color = Color(0.54902, 0.00392157, 0.431373, 1)

[node name="mainmmenuscreen" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_vwco8")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_8ur0r")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 52.0
offset_top = 2.0
offset_right = 51.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_1asoo")
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_ashqg")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme = ExtResource("3_ich61")
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(96, 69)
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "play"

[node name="Button3" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "setting
"

[node name="Button2" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "exit
"

[node name="Player-shoot-up" type="Sprite2D" parent="."]
position = Vector2(387, 555)
scale = Vector2(1.288, 1.35)
texture = ExtResource("4_ktrql")

[node name="Jumper-jump" type="Sprite2D" parent="."]
position = Vector2(494, 467)
texture = ExtResource("5_ptxkv")

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
